--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.wmj.newzhihu.MainActivity">
+    tools:context="com.wmj.newzhihu.activity.MainActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
