增加夜间模式，大字体模式

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
         android:layout_width="305dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/viewBackground"
         android:paddingTop="0dp"
-        android:background="#ffffffff"
         android:clipToPadding="false"
         android:divider="@null"
         android:listSelector="?attr/selectableItemBackground"
