--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#00BCD4</color>
 
-    <color name="textColorPrimary">#616161</color>
+    <color name="textColorPrimary">#212a2f</color>
     <color name="viewBackground">@android:color/white</color>
 
 
